# ignition

./: .gitignore  LICENSE  README.md  Vagrantfile  ignition.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
src/Ignition/: OS.hs  Plug.hs  Spark.hs
template/: Vagrantfile
