name:                ignition
version:             0.0.0.1
synopsis:            Vagrantfile Generation
description:         Please see README.md
homepage:            https://github.com/zekriad/ignition
license:             BSD3
license-file:        LICENSE
author:              zekriad
maintainer:          zekriad@gmail.com
copyright:           2016 zekriad
category:            Utility
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , lens
                     , bytestring
                     , transformers
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable ignition
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ignition
  default-language:    Haskell2010

test-suite ignition-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ignition
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ignition
